# llm-excel-table-finder

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  agent.py  cli.py  excel_tools.py  io.py  prompts.py
src/excel_tools/: __init__.py  base.py  openpyxl_reader.py  pyxlsb_reader.py  xlrd_reader.py
src/llm_excel_table_finder/: agent.py  cli.py  excel_tools.py
